[package]
name = "nprplaylist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = [ "full" ]}
tokio = { version = "1.13", features = [ "full" ]}
serde = { version = "1.0", features = [ "derive" ]}
serde_json = "1.0.68"
# time = { version = "0.3.4", features = [ "formatting", "macros", "parsing" ]}
chrono = "0.4"
